cmake_minimum_required(VERSION 3.28)
project(My_Class)

set(CMAKE_CXX_STANDARD 14)

add_executable(My_Class
        Assignment/1st.cpp
        Assignment/2nd.cpp
        Assignment/3rd.cpp
        Assignment/4th.cpp
        Assignment/5th.cpp
        Assignment/6th.cpp
        Assignment/problems.cpp
        Assignment/problems2.cpp
        "Bank management system in c++/bank management system.cpp"
        "Bank management system in c++/basic.cpp"
        "Bank management system in c++/or.cpp"
        "Chaptra - 02/use_class-2.3.cpp"
        "Chaptra - 03/3.12 - Dynamic Initialization of Variables.cpp"
        "Chaptra - 03/3.13 - Reference Variables.cpp"
        "Chaptra - 03/3.15 - Scope resolution operator.cpp"
        "Chaptra - 03/3.19 - Type Cast Operator.cpp"
        "Chaptra - 03/3.19.cpp"
        "Chaptra - 03/3.8 - Derived Data Type Array.cpp"
        "Chaptra - 03/3.8 - Derived Data Type Function.cpp"
        "Chaptra - 03/3.9 - Symbolic Constants.cpp"
        "Chaptra - 03/fact.cpp"
        "Chaptra - 03/partan.cpp"
        "Chaptra - 03/Pointer used number swaping.cpp"
        "Chaptra - 03/pointer.cpp"
        "Chaptra - 03/scope resolution operator.cpp"
        "Chaptra - 03/sum of two number using class.cpp"
        "Chaptra - 03/switch case.cpp"
        "Chaptra - 03/type cast.cpp"
        "Chaptra - 03/user define data type.cpp"
        "Chaptra - 04/4.10 - Function Overloading.cpp"
        "Chaptra - 04/4.11 - Friend function.cpp"
        "Chaptra - 04/4.4 - Call by reference.cpp"
        "Chaptra - 04/4.5 - Return by Reference.cpp"
        "Chaptra - 04/4.6 - Inline Function.cpp"
        "Chaptra - 04/4.7 - Default Argument.cpp"
        "Chaptra - 04/4.8 - Const Arguments.cpp"
        "Chaptra - 04/4.9 - Recursion.cpp"
        "Chaptra - 04/Call by value.cpp"
        "Chaptra - 04/default argument.cpp"
        "Chaptra - 04/friend Class.cpp"
        "Chaptra - 04/inline function.cpp"
        "Chaptra - 04/pointer.cpp"
        "Chaptra - 04/recursion.cpp"
        "Chaptra - 05/5.10 - Memory Alocation for a Object.cpp"
        "Chaptra - 05/5.13 - Array of Object.cpp"
        "Chaptra - 05/5.15 - Friend Function.cpp"
        "Chaptra - 05/5.4 - Defining Member Function.cpp"
        "Chaptra - 05/5.5 - Program With Class.cpp"
        "Chaptra - 05/5.6 - Making an Outside Function Inline.cpp"
        "Chaptra - 05/5.7 - Nesting of Member Function.cpp"
        "Chaptra - 05/5.8 - Private Member Function.cpp"
        "Chaptra - 05/5.9 - Array within a Class.cpp"
        "Chaptra - 05/Class in a Array Student.cpp"
        "Chaptra - 05/Dynamic Array Initialization.cpp"
        "Chaptra - 05/Memory Alocation Basic.cpp"
        "Chaptra - 06/6.2 - Constructors.cpp"
        "Chaptra - 06/6.2 - Default Constructor.cpp"
        "Chaptra - 06/6.3 - Parameterized Constructor.cpp"
        "Chaptra - 06/6.4 - Multiple Constructor Bangla.cpp"
        "Chaptra - 06/6.4 - Multiple Constructor.cpp"
        "Chaptra - 06/6.5 - Constructor with default argument.cpp"
        "Chaptra - 06/6.7 -  Copy Constructor.cpp"
        "Chaptra - 06/Defult Constructor.cpp"
        "Chaptra - 08/8.2 - Defining Derivd Class.cpp"
        "Chaptra - 08/8.3 - Single Inheritance.cpp"
        "Chaptra - 08/8.5 - Multilevel Inheritance.cpp"
        "Chaptra - 08/8.6 - Multiple Inheritance.cpp"
        "Chaptra - 08/8.7 - Hierarchical Inheritance.cpp"
        "Chaptra - 08/8.8 - Hybrid Inheritance.cpp"
        "Chaptra - 08/Function Overriding.cpp"
        "Chaptra - 08/mobile Managemen Systerm.cpp"
        "Chaptra - 08/rabby vaia.cpp"
        "Chaptra - 08/Student Management System.cpp"
        "Encapsulation C++/Program.cpp"
        "File Management/main.cpp"
        "File Management/sum.cpp"
        "Movie Storage System in c++/movie.cpp"
        "Problems And Solve/01.cpp"
        "Problems And Solve/02.cpp"
        "Test and Partice/constractor/basic.cpp"
        "Test and Partice/01.cpp"
        "Test and Partice/02.cpp"
        "Test and Partice/03.cpp"
        "Test and Partice/04.cpp"
        "Test and Partice/05.cpp"
        "Test and Partice/Array Class.cpp"
        "Test and Partice/Array Object.cpp"
        "Test and Partice/Bank Management System.cpp"
        "Test and Partice/factorial.cpp"
        "Test and Partice/ii.cpp"
        "Test and Partice/p.c"
        "Test and Partice/problems.cpp"
        "Test and Partice/Program to Reverse.cpp"
        "Test and Partice/teachers.cpp"
        "Constractor bass.cpp")
